@@ -1820,6 +1820,7 @@ CFGManagerCustom::CFGManagerCustom(LPCTSTR pName, LPUNKNOWN pUnk)
 	pFGF->AddType(MEDIATYPE_Audio, MEDIASUBTYPE_PCM_IN32);
 	pFGF->AddType(MEDIATYPE_Audio, MEDIASUBTYPE_PCM_FL32);
 	pFGF->AddType(MEDIATYPE_Audio, MEDIASUBTYPE_PCM_FL64);
+	pFGF->AddType(MEDIATYPE_Audio, MEDIASUBTYPE_IMA4);
 	m_transform.AddTail(pFGF);
 #endif
 
