@@ -4,6 +4,7 @@ v1.5.xxxx.0 - unreleased
           embedded subtitles and to set the autoload subtitle paths
  NEW    : LCN support for DVB
  NEW    : added support for 'in24', 'fl64' and 8-bit 'sowt' audio
+ NEW    : added support for 'IMA4' audio
  CHANGED: Updated FFmpeg
  CHANGED: Cleaned up and optimized code for QT PCM, small corrections in MP4Splitter
  FIXED  : Ticket #698, VMR-9 (renderless) + pixel shaders crashes
